--- a/index.html
+++ b/index.html
@@ -7,22 +7,25 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | QR code component</title>
-
+  <link rel="stylesheet" href="./CSS/fonts.css">
+  <link rel="stylesheet" href="./CSS/styles.css">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    
   </style>
 </head>
 <body>
 
-  Improve your front-end skills by building projects
+ <header>
+  <h1>Bienvenu dans le monde de l'apprentissage</h1>
+  <p>Il n'y a vraiment pas de meilleur moyen de maîtriser une compétence que de s'entraîner encore et encore et de résoudre des problèmes du monde réel.</p>
+ </header>
+  <main>
 
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
-  <div class="attribution">
+  </main>
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    Coded by <a href="#">CodeurDHonneur</a>.
+  </footer>
 </body>
 </html>
