mise en place structure projet

--- a/index.html
+++ b/index.html
@@ -21,11 +21,23 @@
   <p>Il n'y a vraiment pas de meilleur moyen de maîtriser une compétence que de s'entraîner encore et encore et de résoudre des problèmes du monde réel.</p>
  </header>
   <main>
-
+    <div class="conteneur">
+      <div class="conteneur-enfant">
+        <div>
+          <img src="./images/image-qr-code.png" alt="QR code">
+        </div>
+        <div class="text-en-gras">
+          Améliorez vos compétences front-end en créant des projets
+        </div>
+        <div>
+          Scannez le code <span>qr</span> pour visiter <a href="https://https://www.frontendmentor.io/">Frontend Mentor</a> et faire passer vos compétences en codage au niveau supérieur
+        </div>
+      </div>
+    </div>
   </main>
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">CodeurDHonneur</a>.
+    Coded by <a href="https://github.com/CodeurDHonneur">CodeurDHonneur</a>.
   </footer>
 </body>
 </html>
